--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,8 @@ h2 {
 	display: block;
 	margin: 3%;	
 	padding: 3%;
+	width: 300px;
+	height: 200px;
 }
 
 @media only screen and (min-width: 530px) {
