--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,43 @@
 body {
-    font-family: 'Varela', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     background-color: rgba(40, 63, 194, 0.425);
 }
 
 h1 { 
     color: black; 
-    font-family: 'Dekko', sans-serif; 
+    font-family: 'Fjalla One', sans-serif;
     font-size: 50px; 
     font-weight: 300; 
     line-height: 55px; 
     margin: 5%;
 }
 
+#index {
+	animation: type 2s steps(45), blink .7s step-end 2s infinite alternate;
+}
+
+
+  @keyframes type {
+    0% {
+      width:0ch;
+    }
+    100% {
+      width:30ch;
+
+    }
+
+  }
+
+  @keyframes blink {
+
+   40% { border-color: transparent;
+
+   }
+}
+
 footer {
 	font-size: 18px;
-	color: #291515c5;
+	color: #000000c5;
 	width: 100%;
 	bottom: 0px;
 	padding: 20px;
@@ -26,7 +49,7 @@ footer {
 	float: none;
 	list-style-type: none;
 	overflow: hidden;
-	background-color: rgb(22, 11, 6);
+	background-color: rgb(0, 0, 0);
 }  
 
 li a {
@@ -38,14 +61,15 @@ li a {
 }
   
 li a:hover:not(.active), a:focus:not(.active), .active {
-	color: rgb(36, 36, 36);
-    background-color: whitesmoke;
-	text-decoration: underline;
+	color: rgb(0, 0, 0);
+    background-color: rgb(48, 187, 129);
+	text-decoration: underline overline #000000;
+	text-decoration-thickness: 5px;
 }
 
 p {
     color: black; 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 16px; 
     line-height: 26px;
     margin: 1%;
@@ -91,10 +115,81 @@ p {
 	margin-left: 5%;
 }
 
+#my-thoughts {
+	text-align: center;
+}
+
+.parallax {
+	background-image: url('mj_vs_bron.jpg');
+  
+	height: 100px; 
+	width: 100%;
+  
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .flex-container {
 	display: flex;
 	flex-direction: column;
 }
+
+.flip-card{
+	width: 700px;
+	height: 700px;
+	padding: 20px;
+	margin: auto;
+	perspective: 800px;
+	display: block;
+ }
+ 
+ .flip-card-inner{
+	 position: relative;
+	 width: 100%;
+	 height: 100%;
+	 text-align: center;
+	 transform-style: preserve-3d;
+	 transition: transform 1.0s;
+ }
+ 
+ .flip-card:hover .flip-card-inner, .flip-card:active .flip-card-inner, .flip-card:focus .flip-card-inner, .flip-card:focus-within .flip-card-inner{
+	 transform: rotateY(180deg);
+ }
+ 
+ .flip-card-front, .flip-card-back {
+	 position: absolute;
+	 width: 100%;
+	 height: 100%;
+	 backface-visibility: hidden;
+	 -webkit-backface-visibility: hidden;
+ }
+ 
+ .flip-card-front{
+	 background-color: #1e8d7b;
+ }
+ 
+ .flip-card-back h1{
+	 margin-top: 14px;
+ }
+ 
+ .flip-card-back {
+   background-color: #1e8d7b;
+   color: #000000;
+   line-height: 200%;
+   transform: rotateY(180deg);
+ }
+ 
+ .flip-card-back p{
+	 text-align: center;
+	 font-family: 'Fjalla One', sans-serif;
+	 font-size: 20px;
+ }
+ 
+ .flip-card.focus-within .flip-card-inner{
+	 transform: rotateY(180deg);
+ }
 
 h2 {
 	font-size: 20px;
@@ -104,9 +199,9 @@ h2 {
 	width: 100%;
 }
 
-.pic {
-	width: 60%;
-	margin: 5%;
+.portrait {
+	width: 30%;
+	margin: 8%;
 }
 
 .paragraphs{
@@ -121,13 +216,26 @@ h2 {
 
 #standing {
 	display: block;
-	margin: 2%;	
-	padding: 3%;
+	margin: auto;	
+	padding: 20px;
 	width: 500px;
 	height: 700px;
 }
 
-@media only screen and (min-width: 530px) and (max-width: 949px) {
+#linkedin {
+	border: 0;
+	padding: 3% 0%;
+	width: 10%;
+}
+
+#github {
+	border: 0;
+	padding: 3% 0%;
+	width: 10%;
+}
+
+
+@media only screen and (min-width: 500px) {
 	.topnav {
 		list-style-type: none;
 		margin: 1%;
@@ -151,7 +259,7 @@ h2 {
 	}
 }
 
-@media only screen and (min-width: 950px) {
+@media only screen and (min-width: 850px) {
 	.flex-container {
 		flex-direction: row;
 	}
@@ -178,6 +286,21 @@ h2 {
 	}
 }
 
+
+@media screen and (prefers-reduced-motion: reduce) {
+	#index {
+		animation: none;
+		border-right: none;
+	}
+    .parallax {
+        background-attachment: scroll;
+    }
+
+    .flip-card-inner {
+        transition: none;
+    }
+  }
+
 #bottom-footer {
     position: relative;
     left: 0;
@@ -185,3 +308,4 @@ h2 {
     height: 100px;
 	width: 100%;
 }
+
